--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,36 +1,5 @@
 <!-- Navigation -->
 
-    <!-- Sidebar -->
-        <div id="sidebar-wrapper">
-            <ul class="sidebar-nav">
-                <li class="sidebar-brand">
-                    <a href="{{ site.baseurl }}">
-                        Home
-                    </a>
-                </li>
-                <li>
-                    <a href="#">About</a>
-                </li>
-                <li>
-                    <a href="#">Services</a>
-                </li>
-                <li>
-                    <a href="#">Portfolio</a>
-                </li>
-                <li>
-                    <a href="#">Events</a>
-                </li>
-                <li>
-                    <a href="#">Blog</a>
-                </li>
-                <li>
-                    <a href="#">FAQ</a>
-                </li>
-                <li>
-                    <a href="#">Contact</a>
-                </li>
-            </ul>
-        </div>
 
 
     <header class="intro-header">
@@ -38,10 +7,25 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="heading text-center">
-                        <a href="/" style="color: #fff; font-size: 4em; font-family: 'Schoolbell', cursive;">Sci Blog</a>
-                        <a href="#menu-toggle" class="btn btn-default sciblog" id="menu-toggle" style="font-weight: bold;">&#9776; Menu</a>
+                        <a href="/" style="color: #fff; font-size: 4em; font-family: 'Schoolbell', cursive;">On-orbit 🛰️</a>
                     </div>
                 </div>
             </div>
         </div>
+
+    <!-- Nav -->
+    <nav>
+       <ul>
+		<li><a href="#">Home</a></li>
+		<li><a href="#">Orbital mechanics</a></li>
+		<li><a href="#">Programming</a>
+			<ul>
+				<li><a>Python</a></li>
+				<li><a>Fortran</a></li>
+			</ul>
+		</li>
+		<li><a href="#">Projects</a></li>
+		<li><a href="#">About me</a></li>
+       </ul>
+    </nav>
     </header>
