--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -20,6 +20,7 @@
 }
 
 #sidebar-wrapper {
+    display: inline;
     z-index: 1000;
     position: fixed;
     left: 250px;
@@ -188,4 +189,72 @@
     #wrapper.toggled {
     padding-left: 0px;
     }
+}
+
+nav {
+	margin: 0 auto;
+	text-align: center;
+	border:1px solid black;
+	background-color: #2c2c2c;
+}
+
+nav ul ul {
+	display: none;
+}
+
+nav ul li:hover > ul {
+	display: block;
+}
+
+nav ul {
+	list-style: none;
+    margin: 0;
+    padding: 0;
+    display: inline-block;
+    vertical-align: top;
+}
+
+nav ul li {
+	float: left;
+    margin: 0;
+    padding: 0;
+    background-color: #2c2c2c;
+    
+}
+
+nav ul li:hover a {
+	color: #fff;
+}
+
+nav ul li a {
+	display: block;
+    padding: 10px 15px;
+	color: #fff;
+    text-decoration: none;
+}
+
+nav ul ul {
+    border-radius: 0px;
+    padding: 0;
+	position: absolute;
+}
+
+nav ul ul li {
+	float: none;
+	border-top: 1px solid #000000;
+    border-bottom: 1px solid #000000;
+    position: relative;
+}
+
+nav ul ul li a {
+	color: #000000;
+}
+
+nav ul ul li a:hover {
+	color: #fff;
+}
+
+nav ul ul ul {
+	position: absolute;
+    top:0;
 }
