--- a/css/style.css
+++ b/css/style.css
@@ -32,12 +32,11 @@ body {
     font-size: 25px;
 }
 header.intro-header {
-	background-image: url('../img/bg.png');
+	background-image: url('../img/stars.jpg');
 	background-repeat: repeat;
 	color: #FFFFFF;
-	padding-bottom: 30px;
 	padding-top: 20px;
-    margin-bottom: 30px;
+        margin-bottom: 30px;
 }
 .well {
     background-image: url('../img/well.png');
