--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <p>Copyright &copy; 2016 Sci Blog<p>
+                    <p>Copyright &copy; 2020 On-Orbit<p>
                 </div>
                 <div class="col-lg-6">
-                    <p style="float: right;">Jekyll theme by <a href="http://www.airrayagroup.com/">AIR RAYA GROUP</a></p>
+                    <p style="float: right;">Based on <a href="https://github.com/yourfreebies/sciblog">Sciblog</a></p>
                 </div>
             </div>
         </div>
