--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
     <!-- Nav -->
     <nav>
        <ul>
-		<li><a href="#">Home</a></li>
+	       <li><a href="{{ site.url }}">Home</a></li>
 		<li><a href="#">Orbital mechanics</a></li>
 		<li><a href="#">Programming</a>
 			<ul>
