--- a/_includes/container.html
+++ b/_includes/container.html
@@ -3,6 +3,8 @@
     <div class="container">
 
         <div class="row">
+	<!-- Content -->
+	<div> {{ content }} </div>
 
             <!-- Blog Post Content Column -->
             <div class="col-lg-8">
