Add introduction to page

--- a/_includes/container.html
+++ b/_includes/container.html
@@ -3,17 +3,18 @@
     <div class="container">
 
         <div class="row">
-	<!-- Content -->
-	<div> {{ content }} </div>
 
             <!-- Blog Post Content Column -->
             <div class="col-lg-8">
+
+	<!-- Content -->
+	<div> {{ content }} </div>
+
                 <!-- Blog Post -->
                 	<div class="post-list" style="list-style-type: none;">
-						{% for post in paginator.posts %} 	
+						{% for post in site.posts %} 	
 							<h2>
-								<img class="title-image" src="{{ "/img/dna.png" | prepend: site.baseurl }}"/>
-								<a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+								<a class="post-link" href="{{ post.url | prepend: site.baseurl }}">📝 {{ post.title }}</a>
 							</h2>
 							<div class="author" style="margin-top: -10px;">Posted by
 								<i class="fa fa-user"></i><a href="http://www.airrayagroup.com/"> {{ post.author}}</a>
