--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
     <nav>
        <ul>
 	       <li><a href="{{ site.url }}">Home</a></li>
-		<li><a href="#">Orbital mechanics</a></li>
+	       <li><a href="../category/orbital_mechanics/index.html">Orbital mechanics</a></li>
 		<li><a href="#">Programming</a>
 			<ul>
 				<li><a>Python</a></li>
