--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@
  * noise background from (http://www.noisetexturegenerator.com/)
  */
 
+@import 'highlight.css';
+
 body { 
     background-image: url('../img/body.png');
     text-align: justify;
