--- a/_includes/container.html
+++ b/_includes/container.html
@@ -80,21 +80,53 @@
             <!-- Widget -->
             <div class="col-md-4">
 
-                <!-- Blog Search -->
-                <div class="well">
-                    <h4>Search</h4>
-                    <div class="input-group">
-					<form action="https://www.google.com" id="cse-search-box">
-					  <div>
-					    <input type="hidden" name="cx" value="" />
-					    <input type="hidden" name="ie" value="UTF-8" />
-					    <input type="text" name="q" size="20" />
-					    <input type="submit" name="sa" value="Search" />
-					  </div>
-					</form>
-					<script type="text/javascript" src="https://www.google.com/coop/cse/brand?form=cse-search-box&amp;lang=en"></script>
-				</div>
-            </div>
+		<!-- start sw-rss-feed code -->
+<script type="text/javascript">
+<!--
+rssfeed_url = new Array();
+rssfeed_url[0]="https://link.springer.com/search.rss?facet-content-type=Article&facet-journal-id=10569&channel-name=Celestial+Mechanics+and+Dynamical+Astronomy";
+rssfeed_url[1]="https://www.degenerateconic.com/feed";
+rssfeed_frame_width="400";
+rssfeed_frame_height="260";
+rssfeed_scroll="off";
+rssfeed_scroll_step="6";
+rssfeed_scroll_bar="on";
+rssfeed_target="_blank";
+rssfeed_font_size="12";
+rssfeed_font_face="";
+rssfeed_border="on";
+rssfeed_css_url="";
+rssfeed_title="on";
+rssfeed_title_name="Celestial mechanics and Dynamical Astronomy";
+rssfeed_title_bgcolor="#3366ff";
+rssfeed_title_color="#fff";
+rssfeed_title_bgimage="";
+rssfeed_footer="off";
+rssfeed_footer_name="rss feed";
+rssfeed_footer_bgcolor="#fff";
+rssfeed_footer_color="#333";
+rssfeed_footer_bgimage="";
+rssfeed_item_title_length="50";
+rssfeed_item_title_color="#666";
+rssfeed_item_bgcolor="#fff";
+rssfeed_item_bgimage="";
+rssfeed_item_border_bottom="on";
+rssfeed_item_source_icon="off";
+rssfeed_item_date="off";
+rssfeed_item_description="on";
+rssfeed_item_description_length="120";
+rssfeed_item_description_color="#666";
+rssfeed_item_description_link_color="#333";
+rssfeed_item_description_tag="off";
+rssfeed_no_items="100";
+rssfeed_cache = "3cb982e67e7ae662ac2c1266d6a25112";
+//-->
+</script>
+<script type="text/javascript" src="//feed.surfing-waves.com/js/rss-feed.js"></script>
+<!-- The link below helps keep this service FREE, and helps other people find the SW widget. Please be cool and keep it! Thanks. -->
+<div style="color:#ccc;font-size:10px; text-align:right; width:750px;">powered by <a href="https://surfing-waves.com" rel="noopener" target="_blank" style="color:#ccc;">Surfing Waves</a></div>
+<!-- end sw-rss-feed code -->
+
                 <!-- Blog Categories -->
                 <div class="well">
                     <h4>Blog Categories</h4>
