--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ header.intro-header {
     background-color: #f5f5f5;
     box-shadow: none;
     border: 1px solid #E7E7E7;
+    width: 400px;
 }
 .input {
     background-image: url('../img/search.png');
