--- a/_includes/container.html
+++ b/_includes/container.html
@@ -79,6 +79,8 @@
 
             <!-- Widget -->
             <div class="col-md-4">
+		    <div class="well">
+		    <h4> Latest journal articles </h4>
 
 		<!-- start sw-rss-feed code -->
 <script type="text/javascript">
@@ -86,7 +88,7 @@
 rssfeed_url = new Array();
 rssfeed_url[0]="https://link.springer.com/search.rss?facet-content-type=Article&facet-journal-id=10569&channel-name=Celestial+Mechanics+and+Dynamical+Astronomy";
 rssfeed_url[1]="https://www.degenerateconic.com/feed";
-rssfeed_frame_width="400";
+rssfeed_frame_width="350";
 rssfeed_frame_height="260";
 rssfeed_scroll="off";
 rssfeed_scroll_step="6";
@@ -123,9 +125,8 @@ rssfeed_cache = "3cb982e67e7ae662ac2c1266d6a25112";
 //-->
 </script>
 <script type="text/javascript" src="//feed.surfing-waves.com/js/rss-feed.js"></script>
-<!-- The link below helps keep this service FREE, and helps other people find the SW widget. Please be cool and keep it! Thanks. -->
-<div style="color:#ccc;font-size:10px; text-align:right; width:750px;">powered by <a href="https://surfing-waves.com" rel="noopener" target="_blank" style="color:#ccc;">Surfing Waves</a></div>
 <!-- end sw-rss-feed code -->
+		    </div>
 
                 <!-- Blog Categories -->
                 <div class="well">
@@ -177,9 +178,8 @@ rssfeed_cache = "3cb982e67e7ae662ac2c1266d6a25112";
                 </div>
                 <!-- author widget -->
                 <div class="well">
-                    <h4>This blog is maintained by <a href="http://www.airrayagroup.com/">AIRRAYA</a></h4>
-                    <p>Get in touch with us at airrayagroup@gmail.com</p>
-					<ul class="list-inline">
+                    <h4>This blog is maintained by <a href="http://www.airrayagroup.com/">Jorge M.G.</a></h4>
+					<ul class="list-inline" style="text-align: center">
                             <li>
 								<a href="https://www.facebook.com/airrayagroup/">
 									<span class="fa-stack fa-2x">
