--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,6 +14,7 @@
 					<p class="post-meta">{% if page.author %} <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">by {{ page.author }}</span></span>{% endif %} <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished"><i class="fa fa-calendar"></i> {{ page.date | date: "%b %-d, %Y" }}</time></p>
 					</div>
 					 {{ content }}
+					 <div style="text-align:center">
 					 <span class='st_sharethis_large' displayText='ShareThis'></span>
 						<span class='st_facebook_large' displayText='Facebook'></span>
 						<span class='st_twitter_large' displayText='Tweet'></span>
@@ -21,11 +22,11 @@
 						<span class='st_pinterest_large' displayText='Pinterest'></span>
 						<span class='st_email_large' displayText='Email'></span>
                 </div>
+		</div>
                 Category {{ page.categories | join: ', ' }}
         </div>
 	</div>
   
-  {% include comment.html %}
 </div>
 <hr>
  {% include footer.html %}
