--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,15 +17,15 @@
     <nav>
        <ul>
 	       <li><a href="{{ site.url }}">Home</a></li>
-	       <li><a href="../category/orbital_mechanics/index.html">Orbital mechanics</a></li>
-		<li><a href="#">Programming</a>
+	       <li><a href="{{ site.url}}/category/orbital-mechanics/index.html">Orbital mechanics</a></li>
+		<li><a href="{{ site.url}}/category/programming/index.html">Programming</a>
 			<ul>
 				<li><a>Python</a></li>
 				<li><a>Fortran</a></li>
 			</ul>
 		</li>
-		<li><a href="#">Projects</a></li>
-		<li><a href="#">About me</a></li>
+		<li><a href="{{ site.url}}/projects.md">Projects</a></li>
+		<li><a href="{{ site.url}}/about.md">About me</a></li>
        </ul>
     </nav>
     </header>
