--- a/_includes/cat.html
+++ b/_includes/cat.html
@@ -7,7 +7,7 @@
             <!-- Blog Post Content Column -->
             <div class="col-lg-8">
                 <!-- Blog Post -->
-                	<h1 style="color: #0F3C73; text-align:center"><span class="outside-cats">Category: {{page.cat_name | capitalize}}</span></h1>
+                	<h1 style="color: #0F3C73; text-align:center"><span class="outside-cats">{{page.cat_name | capitalize}}</span></h1>
                     <div role="main" class="main-content">
                       {{ content }}
                     </div>
