--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,8 +24,8 @@
 				<li><a>Fortran</a></li>
 			</ul>
 		</li>
-		<li><a href="{{ site.url}}/projects.md">Projects</a></li>
-		<li><a href="{{ site.url}}/about.md">About me</a></li>
+		<li><a href="{{ site.url}}/projects.html">Projects</a></li>
+		<li><a href="{{ site.url}}/about.html">About me</a></li>
        </ul>
     </nav>
     </header>
