--- a/css/style.css
+++ b/css/style.css
@@ -153,5 +153,12 @@ a h2{
 background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif;
 }
 ul.posts {
-list-style-image: url('../img/code.png');"
+list-style-image: url('../img/code.png');
 }
+.striped-border {
+        border: 1px dashed #000;
+        width: 95%;
+        margin: auto;
+        margin-top: 5%;
+        margin-bottom: 5%;
+    }
