Update home link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
     <!-- Nav -->
     <nav>
        <ul>
-	       <li><a href="{{ site.url }}">Home</a></li>
+	       <li><a href="{{ site.url }}/index.html">Home</a></li>
 	       <li><a href="{{ site.url}}/category/orbital-mechanics/index.html">Orbital mechanics</a></li>
 		<li><a href="{{ site.url}}/category/programming/index.html">Programming</a>
 			<ul>
