Custom css class for images

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -29,6 +29,12 @@ h5:before { content: "#####";  margin-right: 9px; }
 h6:before { content: "######";  margin-right: 9px; }*/
 
 /**
+ * Images
+ */
+.imgleft {clear: right; float: left; margin-right: 20px; }
+.imgright {clear: left; float: right; margin-left: 20px; }
+
+/**
  * Layout
  */
 .container { width: $container-width;  max-width: $container-max-width;  margin-right: auto;  margin-left: auto; }
