--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -16,7 +16,8 @@ $container-max-width:  1000px !default;
  */
 body { background-color: var(--background-color);  margin: 0 auto;  padding: 0;  font-family: $base-font-family;  font-size: $base-font-size;  color: var(--text-color);  text-align: left;  line-height: $base-line-height !important; }
 h1, h2, h3, h4, h5, h6 { font-size: $base-font-size;  margin: 0px;  margin-top: 22px;  font-weight: bold;  color: var(--text-color); }
-h1, h2, h3, h4, h5, h6 { font-size: 16px;  margin: 0px;  margin-top: 22px;  font-weight: bold;  color: var(--text-color); }
+h1  { font-size: 20px;  margin-bottom: 20px;  margin-top: 22px;  font-weight: bold;  color: var(--text-color); }
+h2  { font-size: 16px;  margin-bottom: 15px;  margin-top: 22px;  font-weight: bold;  color: var(--text-color); }
 p, ul, ol { margin: 0px;  color: var(--text-color); }
 a { text-decoration: underline;  color: var(--link-color); }
 a:hover { color: var(--background-color); background-color: var(--base-color); }
@@ -32,8 +33,8 @@ h6:before { content: "######";  margin-right: 9px; }*/
 /**
  * Images
  */
-.imgleft {clear: right; float: left; margin-right: 20px; }
-.imgright {clear: left; float: right; margin-left: 20px; }
+.imgleft {clear: right; float: left; margin: 0px 20px 15px 0; }
+.imgright {clear: left; float: right; margin: 0px 0px 15px 20px; }
 
 /**
  * Layout
@@ -63,7 +64,7 @@ footer { margin-bottom: 20px; }
  */
 .menu { border-top: var(--border);  border-bottom: var(--border);  margin-bottom: 25px; }
 .menu ul { margin-top: 12px;  margin-bottom: 12px;  padding-left: 0px;  list-style-type: none;  text-align: center; }
-.menu ul li { display: inline;  margin-left: 10px; }
+.menu ul li { display: inline;  margin-left: 20px; }
 .menu ul li a { text-decoration: none;  color: var(--text-color); }
 .menu ul li a:hover { text-decoration: none; color: var(--background-color); background-color: var(--base-color); }
 
