--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,10 +8,13 @@ layout: default
 {%- if site.posts.size > 0 -%}
   <ul>
     {%- for post in site.posts -%}
+    <img class="imgleft" src="{{site.url}}/resources/images/{{ post.thumbnail }}" style="width:150px">
     <li>
       {%- assign date_format = "%Y-%m-%d" -%}
       [ {{ post.date | date: date_format }} ] <a href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
     </li>
+      
+    {{ post.resume }}
     {%- endfor -%}
   </ul>
 {%- endif -%}
