--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,8 @@
 
   {%- if site.listen_for_clients_preferred_style -%}
     <link rel="stylesheet" type="text/css" href="{{ "/assets/main.css" | relative_url }}">
+    <link rel="stylesheet" type="text/css" href="{{ "/assets/layout.css" | relative_url }}">
+    <link rel="stylesheet" type="text/css" href="{{ "/assets/highlight.css" | relative_url }}">
   {%- else -%}
     {%- if site.style == 'light' -%}
      <link rel="stylesheet" type="text/css" href="{{ "/assets/main-light.css" | relative_url }}">
