--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -26,6 +25,16 @@ body {
   padding: 0;
   margin: 0;
 }
+
+p {
+   margin-bottom: 30px; /* between paragraphs */
+}
+
+/**
+ * Images
+ */
+.imgleft {clear: right; float: left; margin: 0px 20px 15px 0; }
+.imgright {clear: left; float: right; margin: 0px 0px 15px 20px; }
 
 /* Style the top navigation bar */
 .topnav {
@@ -90,7 +99,7 @@ body {
     float: left;
     margin-right: 20px;
     margin-bottom: 20px;
-    height: 150px;
+    height: 200px;
     width: 250px;
 }
 
@@ -150,10 +159,16 @@ body {
   <div class="leftcolumn">
 
     <!-- LATEST POST COLLECTION -->
+    {%- for post in site.categories.{{ page.cat_name }} -%}
       <div class="card">
-        <h2>{{ page.title }}</h2>
-              {{ content }}
-      </div>
+          <h2>{{ post.title }}</h2>
+          <h5>By {{post.author}} on {{ post.date | date: '%B %d, %Y' }}</h5>
+          <img class="img_thumbnail" src="{{ site.url }}/resources/thumbnails/{{post.thumbnail}}">
+          <p>
+              {{ post.resume }} <a href="{{ post.url }}">Read more...</a>
+          </p>
+       </div>
+    {%- endfor -%}
    </div>
 
   <!-- RIGHT LATERAL COLUMN PANEL -->
